<resources>
    <string name="app_name">Develop with java</string>
    <string name="order_summary_email_subject" />
    <string name="your_name_please">Your Name Please</string>
    <string name="_1">1</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped_cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="price">Price</string>
    <string name="_20">₹20</string>
    <string name="order">order</string>
    <string name="order_summary">Order Summary</string>
    <string name="greetings">Greetings ,</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>